﻿更新履歴

==== Ver 1.2.4-beta1(2014/xx/xx)
 * NEW: Mobypicture (mobypicture.com) への画像投稿に対応
 * NEW: tmblr.co で短縮されたTumblrのURLに対してもサムネイル表示できるようにしました
 * NEW: i.instagram.com ドメインのURLのサムネイル表示に対応
 * CHG: デフォルトの画像投稿先を Twitter (pic.twitter.com) に変更しました
 * CHG: プロフィール表示・編集でのエスケープ処理を twitter.com での挙動に合わせました
  - 名前および現在地に < > " の記号を使うことはできません (Twitter側で削除されます)
  - 自己紹介では < > " の記号はそれぞれ &lt; &gt; &quot; に変換した上で設定されます
 * FIX: 画像投稿時に、入力したツイートと画像URLの間に空白が2文字入ってしまう不具合を修正
 * FIX: 画像が紐付いていないTumblrのURLに対してサムネイル画像欄が表示され読み込みに失敗する不具合を修正
 * FIX: ESCキーで閉じられないダイアログが一部存在していた問題を修正
 * FIX: サムネイル及びプロフィール画像の読み込み時にメモリリークする恐れがある不具合を修正
 * FIX: 大量のツイートを一括で既読にする際の速度を改善
 * FIX: ショートカットキー Alt+Shift+[↑↓] によるサムネイル画像のスクロールの向きが正しくない不具合を修正

==== Ver 1.2.3(2014/09/03)
 * NEW: UserSteams の (un)mute イベント追加に対応
  - 再起動せずにミュートの追加・解除が反映されるようになります
 * CHG: 複数選択状態の画像ファイルをD&Dした際の動作を変更しました
  - ドロップされたファイルを一度に読み込むようにしました（投稿先の投稿可能枚数までで、現状は pic.twitter.com のみ）
 * FIX: 翻訳機能使用時に発言詳細部のフォント設定が適用されない問題を修正
 * FIX: ツイート投稿時などに接続エラーが発生する現象の対策 (thx @moccos!)
 * CHG: UserSteams のイベント通知に使用される NotifyIcon のバルーンアイコンを Warning から Info に変更

==== Ver 1.2.2(2014/07/06)
 * このバージョンのOpenTweenは pic.twitter.com に複数枚の画像が含まれている場合の表示に対応していますが、
   現状では「ユーザーのタイムラインを表示」やUserStreamsを無効にした状態で取得されたツイートのみ表示できます。
   UserStreamsやPublicSearchについてはTwitterAPI側の対応待ちです。

 * NEW: pic.twitter.com への複数枚画像の投稿に対応しました
  - 投稿先に Twitter を選択し、左端のコンボボックスを切り替えることで、最大 4 枚まで選択可能です
  - 投稿するファイルの数・サイズによっては、投稿完了までに若干の時間がかかります
 * NEW: GIFMAGAZINE のサムネイル表示に対応
  - pic.twitter.com に投稿されたアニメーションGIFはTwitterAPI側の対応待ちで当面の間表示はできません
 * CHG: 発言詳細部の更新時のパフォーマンスを改善
 * FIX: pic.twitter.com に複数枚の画像が含まれていた場合のサムネイル表示が適切に実装できていなかった問題を修正
 * FIX: 一部クライアントから投稿されたツイートの読み込み時にエラーが発生する問題の修正
 * FIX: 短縮URL生成時のエラーが適切に処理されない問題を修正
 * FIX: プロキシ設定が一部の機能 (アイコンの読み込み, 短縮URLの展開等) で適用されない問題を修正

==== Ver 1.2.1(2014/05/26)
 * NEW: 5月28日(太平洋夏時間, UTC-7)から追加される予定の pic.twitter.com の複数枚画像表示に対応しました
  - pic.twitter.com への複数枚画像の投稿は未対応です
 * CHG: 起動時に .NET Framework 4.5.1 以降がインストールされているか確認を行います